failed attempt to make batch rendering and extra features

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -9,9 +9,10 @@ Size=153,114
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=643,267
-Size=550,706
-Collapsed=1
+ViewportPos=-93,291
+ViewportId=0xE927CF2F
+Size=372,492
+Collapsed=0
 
 [Window][Dear ImGui Debug Log]
 Pos=-31,69
@@ -24,8 +25,40 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-Pos=12,46
-Size=348,440
+ViewportPos=1074,58
+ViewportId=0xC89E3217
+Size=397,476
+Collapsed=0
+
+[Window][DockSpace Demo]
+Size=1440,794
+Collapsed=0
+
+[Window][Example: Log]
+Pos=60,60
+Size=500,400
+Collapsed=0
+
+[Window][Example: Documents]
+ViewportPos=285,443
+ViewportId=0x1FD64BEB
+Size=1000,338
+Collapsed=0
+
+[Window][Example: Console]
+Pos=374,550
+Size=1066,244
+Collapsed=0
+DockId=0x00000006,0
+
+[Window][Example: Custom rendering]
+Pos=60,60
+Size=485,414
+Collapsed=0
+
+[Window][Example: Property editor]
+Pos=876,38
+Size=430,450
 Collapsed=0
 
 [Table][0xC9935533,3]
@@ -95,4 +128,13 @@ RefScale=13
 Column 0  Width=86
 Column 1  Width=86
 Column 2  Width=86
+
+[Table][0xD0F0C6E3,2]
+Column 0  Weight=1.0000
+Column 1  Weight=1.0000
+
+[Docking][Data]
+DockSpace   ID=0x3BC79352 Pos=0,64 Size=1440,775 Split=Y
+  DockNode  ID=0x00000005 Parent=0x3BC79352 SizeRef=746,529 CentralNode=1
+  DockNode  ID=0x00000006 Parent=0x3BC79352 SizeRef=746,244 Selected=0xDE6E0C33
 
