--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -25,9 +25,8 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-ViewportPos=1015,105
-ViewportId=0xC89E3217
-Size=397,480
+Pos=19,53
+Size=362,503
 Collapsed=0
 
 [Window][DockSpace Demo]
