--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -25,7 +25,8 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-Pos=0,131
+ViewportPos=-70,173
+ViewportId=0xC89E3217
 Size=362,503
 Collapsed=0
 
