--- a/RVL/CMakeLists.txt
+++ b/RVL/CMakeLists.txt
@@ -13,6 +13,7 @@ add_library(RVL STATIC
     src/RVL/Events/KeyEvents.cpp
     src/RVL/Events/WindowEvents.cpp
     src/RVL/Events/CursorEvents.cpp
+    src/RVL/Events/MouseEvents.cpp
     src/RVL/Rendering/OpenGL/GLContext.cpp
     src/RVL/Rendering/OpenGL/GLBuffer.cpp
     src/RVL/Rendering/OpenGL/GLTexture.cpp
