--- a/RVLMapEditor/imgui.ini
+++ b/RVLMapEditor/imgui.ini
@@ -27,7 +27,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Project]
-Pos=136,127
+Pos=-112,64
 Size=272,391
 Collapsed=0
 
@@ -55,7 +55,7 @@ Collapsed=0
 DockId=0x00000003,0
 
 [Window][Add Tile]
-Pos=421,165
+Pos=201,142
 Size=260,323
 Collapsed=0
 
@@ -73,8 +73,8 @@ DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,64 Size=1440,775 Split=X
   DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1145,775 Split=X
     DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=905,775 Split=X
       DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
-      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0xE192E354
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=667,461 CentralNode=1 Selected=0x06D5B7B7
-        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=667,218 Selected=0x49278EEE
+      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0x06D5B7B7
+        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=905,555 CentralNode=1 Selected=0x06D5B7B7
+        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=905,218 Selected=0x49278EEE
     DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=238,775 Selected=0xD44407B5
 
