--- a/RVLMapEditor/imgui.ini
+++ b/RVLMapEditor/imgui.ini
@@ -7,7 +7,7 @@ Collapsed=1
 Pos=291,19
 Size=417,468
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -21,60 +21,93 @@ Collapsed=0
 DockId=0x00000001,0
 
 [Window][Console]
-Pos=295,576
-Size=905,218
+Pos=319,578
+Size=834,216
 Collapsed=0
 DockId=0x00000004,0
 
 [Window][Project]
-Pos=-112,64
+Pos=560,222
 Size=272,391
 Collapsed=0
 
 [Window][Open Existing Project]
-Pos=504,77
-Size=234,212
+Pos=214,157
+Size=557,320
 Collapsed=0
 
 [Window][Tile Pallete]
 Pos=0,19
-Size=293,495
+Size=373,775
 Collapsed=0
-DockId=0x00000009,0
+DockId=0x00000005,0
 
 [Window][Tools]
-Pos=1202,19
-Size=238,775
+Pos=1155,19
+Size=285,775
 Collapsed=0
 DockId=0x00000008,0
 
 [Window][Map View]
-Pos=295,19
-Size=905,555
+Pos=375,19
+Size=744,775
 Collapsed=0
-DockId=0x00000003,0
+DockId=0x0000000B,0
 
 [Window][Add Tile]
-Pos=201,142
+Pos=679,193
 Size=260,323
 Collapsed=0
 
 [Window][Properties]
-Pos=0,516
-Size=293,278
+Pos=1121,19
+Size=319,775
 Collapsed=0
 DockId=0x0000000A,0
 
+[Window][ThePopup]
+Pos=450,331
+Size=52,52
+Collapsed=0
+
+[Window][Save]
+Pos=627,379
+Size=245,139
+Collapsed=0
+
+[Window][Projects]
+Pos=358,147
+Size=627,429
+Collapsed=0
+
+[Window][Delete Project]
+Pos=407,297
+Size=161,109
+Collapsed=0
+
+[Window][Dear ImGui Demo]
+Pos=192,56
+Size=373,656
+Collapsed=0
+
+[Window][Example: Console]
+Pos=375,409
+Size=744,385
+Collapsed=0
+DockId=0x0000000C,0
+
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,64 Size=1440,775 Split=X Selected=0xE192E354
-  DockNode        ID=0x00000005 Parent=0x3BC79352 SizeRef=293,775 Split=Y Selected=0x199AB496
-    DockNode      ID=0x00000009 Parent=0x00000005 SizeRef=320,495 Selected=0xA2BF4849
-    DockNode      ID=0x0000000A Parent=0x00000005 SizeRef=320,278 Selected=0x199AB496
-  DockNode        ID=0x00000006 Parent=0x3BC79352 SizeRef=1145,775 Split=X
-    DockNode      ID=0x00000007 Parent=0x00000006 SizeRef=905,775 Split=X
-      DockNode    ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
-      DockNode    ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0x06D5B7B7
-        DockNode  ID=0x00000003 Parent=0x00000002 SizeRef=905,555 CentralNode=1 Selected=0x06D5B7B7
-        DockNode  ID=0x00000004 Parent=0x00000002 SizeRef=905,218 Selected=0x49278EEE
-    DockNode      ID=0x00000008 Parent=0x00000006 SizeRef=238,775 Selected=0xD44407B5
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,64 Size=1440,775 Split=X Selected=0xE192E354
+  DockNode            ID=0x00000009 Parent=0x3BC79352 SizeRef=1119,775 Split=X
+    DockNode          ID=0x00000005 Parent=0x00000009 SizeRef=373,775 Selected=0xA2BF4849
+    DockNode          ID=0x00000006 Parent=0x00000009 SizeRef=744,775 Split=X
+      DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=834,775 Split=X
+        DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
+        DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0x06D5B7B7
+          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=905,557 Split=Y Selected=0x06D5B7B7
+            DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=744,388 CentralNode=1 Selected=0x06D5B7B7
+            DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=744,385 Selected=0xDE6E0C33
+          DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=905,216 Selected=0x49278EEE
+      DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=285,775 Selected=0xD44407B5
+  DockNode            ID=0x0000000A Parent=0x3BC79352 SizeRef=319,775 Selected=0x199AB496
 
