Added native file dialogs in map editor Renames RvlScene to RvlState, because it just makes sence

--- a/RVLMapEditor/imgui.ini
+++ b/RVLMapEditor/imgui.ini
@@ -7,11 +7,11 @@ Collapsed=1
 Pos=291,19
 Size=417,468
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000006,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1440,794
+Size=1000,700
 Collapsed=0
 
 [Window][Test]
@@ -27,7 +27,7 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Project]
-Pos=414,233
+Pos=355,127
 Size=272,391
 Collapsed=0
 
@@ -38,7 +38,7 @@ Collapsed=0
 
 [Window][Tile Pallete]
 Pos=0,20
-Size=252,774
+Size=281,762
 Collapsed=0
 DockId=0x00000005,0
 
@@ -49,21 +49,21 @@ Collapsed=0
 DockId=0x00000008,0
 
 [Window][Map View]
-Pos=254,20
-Size=865,774
+Pos=283,20
+Size=836,762
 Collapsed=0
-DockId=0x0000000B,0
+DockId=0x00000006,0
 
 [Window][Add Tile]
-Pos=628,210
+Pos=466,289
 Size=260,323
 Collapsed=0
 
 [Window][Properties]
 Pos=1121,20
-Size=319,774
+Size=319,456
 Collapsed=0
-DockId=0x0000000A,0
+DockId=0x0000000D,0
 
 [Window][ThePopup]
 Pos=450,331
@@ -71,12 +71,12 @@ Size=52,52
 Collapsed=0
 
 [Window][Save]
-Pos=627,379
+Pos=255,290
 Size=245,139
 Collapsed=0
 
 [Window][Projects]
-Pos=-89,63
+Pos=193,118
 Size=627,429
 Collapsed=0
 
@@ -96,18 +96,26 @@ Size=744,385
 Collapsed=0
 DockId=0x0000000C,0
 
+[Window][Log Console]
+Pos=1121,478
+Size=319,304
+Collapsed=0
+DockId=0x0000000E,0
+
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=0,65 Size=1440,774 Split=X Selected=0xE192E354
-  DockNode            ID=0x00000009 Parent=0x3BC79352 SizeRef=1119,775 Split=X
-    DockNode          ID=0x00000005 Parent=0x00000009 SizeRef=252,775 Selected=0xA2BF4849
-    DockNode          ID=0x00000006 Parent=0x00000009 SizeRef=865,775 Split=X
-      DockNode        ID=0x00000007 Parent=0x00000006 SizeRef=834,775 Split=X
-        DockNode      ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
-        DockNode      ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0x06D5B7B7
-          DockNode    ID=0x00000003 Parent=0x00000002 SizeRef=905,557 Split=Y Selected=0x06D5B7B7
-            DockNode  ID=0x0000000B Parent=0x00000003 SizeRef=744,388 CentralNode=1 Selected=0x06D5B7B7
-            DockNode  ID=0x0000000C Parent=0x00000003 SizeRef=744,385 Selected=0xDE6E0C33
-          DockNode    ID=0x00000004 Parent=0x00000002 SizeRef=905,216 Selected=0x49278EEE
-      DockNode        ID=0x00000008 Parent=0x00000006 SizeRef=285,775 Selected=0xD44407B5
-  DockNode            ID=0x0000000A Parent=0x3BC79352 SizeRef=319,775 Selected=0x199AB496
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=220,86 Size=1000,680 Split=X Selected=0xE192E354
+  DockNode            ID=0x00000009 Parent=0x3BC79352 SizeRef=1119,774 Split=X
+    DockNode          ID=0x00000007 Parent=0x00000009 SizeRef=834,775 Split=X
+      DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
+      DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=1069,681 Split=Y Selected=0x06D5B7B7
+        DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=905,557 Split=Y Selected=0x06D5B7B7
+          DockNode    ID=0x0000000B Parent=0x00000003 SizeRef=744,388 Split=X Selected=0x06D5B7B7
+            DockNode  ID=0x00000005 Parent=0x0000000B SizeRef=281,463 Selected=0xA2BF4849
+            DockNode  ID=0x00000006 Parent=0x0000000B SizeRef=836,463 CentralNode=1 Selected=0x06D5B7B7
+          DockNode    ID=0x0000000C Parent=0x00000003 SizeRef=744,385 Selected=0xDE6E0C33
+        DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=905,216 Selected=0x49278EEE
+    DockNode          ID=0x00000008 Parent=0x00000009 SizeRef=285,775 Selected=0xD44407B5
+  DockNode            ID=0x0000000A Parent=0x3BC79352 SizeRef=319,774 Split=Y Selected=0x199AB496
+    DockNode          ID=0x0000000D Parent=0x0000000A SizeRef=319,463 Selected=0x199AB496
+    DockNode          ID=0x0000000E Parent=0x0000000A SizeRef=319,309 Selected=0xCB85D25D
 
