--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "RVL/vendor/include/glm"]
 	path = RVL/vendor/include/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "RVLMapEditor/vendor/nativefiledialog"]
+	path = RVLMapEditor/vendor/nativefiledialog
+	url = https://github.com/mlabbe/nativefiledialog.git
