--- a/RVL/CMakeLists.txt
+++ b/RVL/CMakeLists.txt
@@ -4,7 +4,7 @@ project(RVL)
 
 add_library(RVL STATIC
     src/RVL/Core/RvlApp.cpp
-    src/RVL/Core/RvlScene.cpp
+    src/RVL/Core/RvlState.cpp
     src/RVL/Core/Error.cpp
     src/RVL/Core/Types.cpp
     src/RVL/Core/Window.cpp
