Some renames Renamed namespace 'rvl' to 'Rvl' Renamed RvlApp to App and RvlState to State

--- a/RVL/CMakeLists.txt
+++ b/RVL/CMakeLists.txt
@@ -3,8 +3,8 @@ cmake_minimum_required(VERSION 3.1)
 project(RVL)
 
 add_library(RVL STATIC
-    src/RVL/Core/RvlApp.cpp
-    src/RVL/Core/RvlState.cpp
+    src/RVL/Core/App.cpp
+    src/RVL/Core/State.cpp
     src/RVL/Core/Error.cpp
     src/RVL/Core/Types.cpp
     src/RVL/Core/Window.cpp
