--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -25,8 +25,7 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-ViewportPos=-70,173
-ViewportId=0xC89E3217
+Pos=33,80
 Size=362,503
 Collapsed=0
 
