--- a/RVLMapEditor/imgui.ini
+++ b/RVLMapEditor/imgui.ini
@@ -76,7 +76,8 @@ Size=245,139
 Collapsed=0
 
 [Window][Projects]
-Pos=203,130
+ViewportPos=203,175
+ViewportId=0xA5E5D1F2
 Size=627,429
 Collapsed=0
 
@@ -103,7 +104,7 @@ Collapsed=0
 DockId=0x0000000E,0
 
 [Docking][Data]
-DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=231,113 Size=1000,680 Split=X Selected=0xE192E354
+DockSpace             ID=0x3BC79352 Window=0x4647B76E Pos=220,87 Size=1000,680 Split=X Selected=0xE192E354
   DockNode            ID=0x00000009 Parent=0x3BC79352 SizeRef=1119,774 Split=X
     DockNode          ID=0x00000007 Parent=0x00000009 SizeRef=834,775 Split=X
       DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=369,681 Selected=0x44A6A033
