--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -25,7 +25,8 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-Pos=33,80
+ViewportPos=1271,153
+ViewportId=0xC89E3217
 Size=362,503
 Collapsed=0
 
