--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -26,8 +26,7 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-ViewportPos=117,217
-ViewportId=0xC89E3217
+Pos=42,71
 Size=362,503
 Collapsed=0
 
