Components and rendering tweaks + starting work on editor

--- a/sandbox/imgui.ini
+++ b/sandbox/imgui.ini
@@ -26,8 +26,9 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-Pos=57,108
-Size=337,486
+ViewportPos=251,94
+ViewportId=0xC89E3217
+Size=983,832
 Collapsed=0
 
 [Window][DockSpace Demo]
@@ -59,6 +60,12 @@ Collapsed=0
 [Window][Example: Property editor]
 Pos=876,38
 Size=430,450
+Collapsed=0
+
+[Window][Scene]
+ViewportPos=582,258
+ViewportId=0x18B8C0DE
+Size=720,422
 Collapsed=0
 
 [Table][0xC9935533,3]
