--- a/RVLEditor/imgui.ini
+++ b/RVLEditor/imgui.ini
@@ -26,10 +26,10 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-Pos=0,20
-Size=446,774
+Pos=0,241
+Size=387,553
 Collapsed=0
-DockId=0x00000001,0
+DockId=0x00000008,0
 
 [Window][DockSpace Demo]
 Pos=0,0
@@ -64,8 +64,8 @@ Size=430,450
 Collapsed=0
 
 [Window][Scene]
-Pos=448,20
-Size=992,774
+Pos=389,21
+Size=1051,773
 Collapsed=0
 DockId=0x00000005,0
 
@@ -74,6 +74,18 @@ ViewportPos=-31,671
 ViewportId=0x18EDB14D
 Size=441,186
 Collapsed=0
+
+[Window][Hierarchy]
+Pos=0,21
+Size=387,218
+Collapsed=0
+DockId=0x00000007,0
+
+[Window][Inspector]
+Pos=0,241
+Size=387,553
+Collapsed=0
+DockId=0x00000008,1
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -148,9 +160,11 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,65 Size=1440,774 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=446,680 Selected=0x199AB496
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=992,680 Split=Y
+DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,66 Size=1440,773 Split=X
+  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=387,773 Split=Y Selected=0x29EABFBD
+    DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=392,218 Selected=0x29EABFBD
+    DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=392,553 Selected=0xE7039252
+  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=1051,773 Split=Y
     DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=746,529 CentralNode=1 Selected=0xE192E354
     DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=746,244 Selected=0xDE6E0C33
 
