--- a/RVLEditor/imgui.ini
+++ b/RVLEditor/imgui.ini
@@ -26,14 +26,14 @@ Size=237,313
 Collapsed=0
 
 [Window][Properties]
-Pos=0,241
-Size=387,553
+Pos=389,618
+Size=1051,174
 Collapsed=0
-DockId=0x00000008,0
+DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1440,794
+Size=1440,792
 Collapsed=0
 
 [Window][Example: Log]
@@ -65,9 +65,9 @@ Collapsed=0
 
 [Window][Scene]
 Pos=389,21
-Size=1051,773
+Size=1051,595
 Collapsed=0
-DockId=0x00000005,0
+DockId=0x00000003,0
 
 [Window][lol]
 ViewportPos=-31,671
@@ -77,15 +77,15 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=387,218
+Size=387,175
 Collapsed=0
 DockId=0x00000007,0
 
 [Window][Inspector]
-Pos=0,241
-Size=387,553
+Pos=0,198
+Size=387,594
 Collapsed=0
-DockId=0x00000008,1
+DockId=0x00000008,0
 
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
@@ -160,11 +160,13 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Window=0x4647B76E Pos=0,66 Size=1440,773 Split=X
-  DockNode    ID=0x00000001 Parent=0x3BC79352 SizeRef=387,773 Split=Y Selected=0x29EABFBD
-    DockNode  ID=0x00000007 Parent=0x00000001 SizeRef=392,218 Selected=0x29EABFBD
-    DockNode  ID=0x00000008 Parent=0x00000001 SizeRef=392,553 Selected=0xE7039252
-  DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=1051,773 Split=Y
-    DockNode  ID=0x00000005 Parent=0x00000002 SizeRef=746,529 CentralNode=1 Selected=0xE192E354
-    DockNode  ID=0x00000006 Parent=0x00000002 SizeRef=746,244 Selected=0xDE6E0C33
+DockSpace       ID=0x3BC79352 Window=0x4647B76E Pos=0,66 Size=1440,771 Split=X
+  DockNode      ID=0x00000001 Parent=0x3BC79352 SizeRef=387,773 Split=Y Selected=0x29EABFBD
+    DockNode    ID=0x00000007 Parent=0x00000001 SizeRef=392,175 Selected=0x29EABFBD
+    DockNode    ID=0x00000008 Parent=0x00000001 SizeRef=392,594 Selected=0xE7039252
+  DockNode      ID=0x00000002 Parent=0x3BC79352 SizeRef=1051,773 Split=Y
+    DockNode    ID=0x00000005 Parent=0x00000002 SizeRef=746,529 Split=Y Selected=0xE192E354
+      DockNode  ID=0x00000003 Parent=0x00000005 SizeRef=1051,595 CentralNode=1 Selected=0xE192E354
+      DockNode  ID=0x00000004 Parent=0x00000005 SizeRef=1051,174 Selected=0x199AB496
+    DockNode    ID=0x00000006 Parent=0x00000002 SizeRef=746,244 Selected=0xDE6E0C33
 
