--- a/RVLEditor/imgui.ini
+++ b/RVLEditor/imgui.ini
@@ -87,6 +87,11 @@ Size=387,594
 Collapsed=0
 DockId=0x00000008,0
 
+[Window][Components]
+Pos=672,367
+Size=99,67
+Collapsed=0
+
 [Table][0xC9935533,3]
 Column 0  Weight=1.0000
 Column 1  Weight=1.0000
