--- a/RVLEditor/imgui.ini
+++ b/RVLEditor/imgui.ini
@@ -33,7 +33,7 @@ DockId=0x00000004,0
 
 [Window][DockSpace Demo]
 Pos=0,0
-Size=1440,794
+Size=1440,799
 Collapsed=0
 
 [Window][Example: Log]
@@ -64,8 +64,8 @@ Size=430,450
 Collapsed=0
 
 [Window][Scene]
-Pos=388,21
-Size=1052,589
+Pos=290,21
+Size=808,594
 Collapsed=0
 DockId=0x00000009,0
 
@@ -77,13 +77,13 @@ Collapsed=0
 
 [Window][Hierarchy]
 Pos=0,21
-Size=386,182
+Size=288,778
 Collapsed=0
-DockId=0x00000007,0
+DockId=0x00000001,0
 
 [Window][Inspector]
-Pos=0,205
-Size=386,589
+Pos=1100,21
+Size=340,778
 Collapsed=0
 DockId=0x00000008,0
 
@@ -93,8 +93,8 @@ Size=99,67
 Collapsed=0
 
 [Window][Statistics]
-Pos=388,612
-Size=1052,182
+Pos=290,617
+Size=808,182
 Collapsed=0
 DockId=0x0000000A,0
 
@@ -171,15 +171,15 @@ Column 0  Weight=1.0000
 Column 1  Weight=1.0000
 
 [Docking][Data]
-DockSpace         ID=0x3BC79352 Window=0x4647B76E Pos=0,66 Size=1440,773 Split=X
-  DockNode        ID=0x00000001 Parent=0x3BC79352 SizeRef=386,679 Split=Y Selected=0xE7039252
-    DockNode      ID=0x00000007 Parent=0x00000001 SizeRef=386,182 Selected=0x29EABFBD
-    DockNode      ID=0x00000008 Parent=0x00000001 SizeRef=386,589 Selected=0xE7039252
-  DockNode        ID=0x00000002 Parent=0x3BC79352 SizeRef=612,679 Split=Y
-    DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=746,529 Split=Y Selected=0xE192E354
-      DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1051,595 Split=Y Selected=0xE192E354
-        DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=1052,589 CentralNode=1 Selected=0xE192E354
-        DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=1052,182 Selected=0x47E8F9DC
-      DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1051,174 Selected=0x199AB496
-    DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=746,244 Selected=0xDE6E0C33
+DockSpace           ID=0x3BC79352 Window=0x4647B76E Pos=0,66 Size=1440,778 Split=X
+  DockNode          ID=0x00000007 Parent=0x3BC79352 SizeRef=1098,772 Split=X
+    DockNode        ID=0x00000001 Parent=0x00000007 SizeRef=288,679 Selected=0x29EABFBD
+    DockNode        ID=0x00000002 Parent=0x00000007 SizeRef=808,679 Split=Y
+      DockNode      ID=0x00000005 Parent=0x00000002 SizeRef=746,529 Split=Y Selected=0xE192E354
+        DockNode    ID=0x00000003 Parent=0x00000005 SizeRef=1051,595 Split=Y Selected=0xE192E354
+          DockNode  ID=0x00000009 Parent=0x00000003 SizeRef=1052,589 CentralNode=1 Selected=0xE192E354
+          DockNode  ID=0x0000000A Parent=0x00000003 SizeRef=1052,182 Selected=0x47E8F9DC
+        DockNode    ID=0x00000004 Parent=0x00000005 SizeRef=1051,174 Selected=0x199AB496
+      DockNode      ID=0x00000006 Parent=0x00000002 SizeRef=746,244 Selected=0xDE6E0C33
+  DockNode          ID=0x00000008 Parent=0x3BC79352 SizeRef=340,772 Selected=0xE7039252
 
