--- a/RVLEditor/CMakeLists.txt
+++ b/RVLEditor/CMakeLists.txt
@@ -17,6 +17,7 @@ target_include_directories(editor PRIVATE ../RVL/src/RVL/API/ECS)
 target_include_directories(editor PRIVATE ../RVL/vendor/)
 target_include_directories(editor PRIVATE ../RVL/vendor/include/)
 target_include_directories(editor PRIVATE ../RVL/vendor/assimp/include/)
+target_include_directories(editor PRIVATE ../RVL/vendor/yaml/include/)
 target_include_directories(editor PRIVATE ../RVL/vendor/include/glm)
 target_include_directories(editor PRIVATE ../RVL/vendor/imgui/)
 target_include_directories(editor PRIVATE ../RVL/src)
